refactor: optimize database queries from local changes,